tests/invalid/raise_non_exception_expr/main.py
def main() -> None:
    raise 123
